# langchain_foundation

./: README.md  personal_chef.ipynb  personal_chef.py  pyproject.toml
prompts/: bengali_chef_prompt.md
