[project]
name = "langchain-foundation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "asttokens>=3.0.1",
    "comm>=0.2.3",
    "ddgs>=9.14.4",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
]
